--- a/application/admin/view/game/index.html
+++ b/application/admin/view/game/index.html
@@ -39,7 +39,7 @@
         ,height: 'full-220'
         ,cols: [[ //表头
           {field: 'name', title: '彩种名称', width:160}
-          ,{field: 'gameType', title: '彩种键名', width:110}
+          ,{field: 'gameType', title: '彩种键名', width:80}
           ,{field: 'jsType', title: '开奖球号', width:110}
           ,{field: 'dataUrl', title: '采集链接', width:500}
           ,{field: 'txtStatus', title: '状态', width:90, templet: '#statusTpl'}
@@ -48,9 +48,10 @@
           ,{field: 'wf', title: '玩法前缀', width:110}
           ,{field: 'select', title: '是否切换', width:110}
           ,{field: 'te', title: '显示特', width:110}
+		  ,{field: 'teModel', title: '特模型', width:110}
           ,{field: 'key', title: '显示键盘', width:110}
-          ,{field: 'createTime', title: '添加时间', width:160}
-          ,{field: 'updateTime', title: '更新时间', width:160}
+          //,{field: 'createTime', title: '添加时间', width:160}
+          //,{field: 'updateTime', title: '更新时间', width:160}
           ,{align:'center', toolbar: '#barDemo', title: '操作', width:160} 
         ]]
       });
