--- a/application/admin/view/public/record.html
+++ b/application/admin/view/public/record.html
@@ -233,9 +233,9 @@
     总上下:<span id="totalUp">0</span><span id="totalDown">0</span>&nbsp;=&nbsp;<span id="totalUpDown">0</span>
 </div>
 <div style="width:100%;">
-        未飞单:<span id="flyersWait">0</span>&nbsp;&nbsp;
-        飞单成功:<span id="flyersSuc">0</span>&nbsp;&nbsp;
-        飞单失败:<span id="flyersFail">0</span>
+        未报:<span id="flyersWait">0</span>&nbsp;&nbsp;
+        已报:<span id="flyersSuc">0</span>&nbsp;&nbsp;
+        失败:<span id="flyersFail">0</span>
     </div>
 
 <div style="width:100%;">
