--- a/application/admin/view/rb/list.html
+++ b/application/admin/view/rb/list.html
@@ -55,18 +55,18 @@
           ,{field: 'fly', title: '飞单', width:60}
           ,{field: 'flyName', title: '飞单帐号', width:110}
           ,{field: 'flyPwd', title: '飞单密码', width:110}
-        //   ,{field: 'type', title: '彩种'}
-        //   ,{field: 'jstype', title: '结算号码', width:90}
-        //   ,{field: 'jsj', title: '计算'}
+           ,{field: 'type', title: '彩种'}
+           //,{field: 'jstype', title: '结算号码', width:90}
+          // ,{field: 'jsj', title: '计算'}
           ,{field: 'fengpan', title: '封盘(秒)', width:90}
           ,{field: 'cancel', title: '取消(秒)', width:90}
           ,{field: 'FanShui', title: '返水', width:60}
           ,{field: 'PeiLv', title: '赔率', width:60}
           ,{field: 'teFanshui', title: '特码返水', width:90}
           ,{field: 'tePeilv', title: '特码赔率', width:90}
-          ,{field: 'txtZhui', title: '追功能', width:80}
+          //,{field: 'txtZhui', title: '追功能', width:80}
           ,{field: 'txtXiugai', title: '修改权限', width:90}
-        //   ,{field: 'delay', title: '延报'}
+          ,{field: 'delay', title: '延报'}
         //   ,{field: 't', title: '特限额', width:80}
         //   ,{field: 'pt', title: '普通限额', width:90}
           ,{field: 'total', title: '单场总限额', width:100}
