--- a/application/admin/view/tongji/index.html
+++ b/application/admin/view/tongji/index.html
@@ -22,9 +22,9 @@
 
 <div class="uk-container uk-container-center uk-margin-top">
     <div class="uk-grid">
-        <div class="uk-width-1-4" style="width:auto;">
-            <a href="javascript:;" class="uk-button uk-button-small" id="btnWay1">积分流水</a>
-        </div>
+    <div class="uk-width-1-4" style="width:auto;">
+        <a href="javascript:;" class="uk-button uk-button-small" id="btnWay1">积分流水</a>
+        </div>              
         <!--<div class="uk-width-1-4">-->
         <!--    <a href="javascript:;" class="uk-button uk-button-small" id="btnWay3">番摊</a>-->
         <!--</div>-->
@@ -409,7 +409,7 @@
 <div class="uk-container uk-container-center  uk-margin-large-top" id="acontent4" style="display: none;">
     <div class="uk-grid uk-grid-small">
         <div class="uk-width-1-1">
-            <h3>以下为盈亏报表</h3>
+            <h3>盈亏报表</h3>
         </div>
     </div>
     <div class="uk-grid uk-grid-small">
