--- a/application/chat/view/index/register.html
+++ b/application/chat/view/index/register.html
@@ -258,7 +258,7 @@
 						<div class="button_group"><button type="submit"
 								class="van-button van-button--primary van-button--normal van-button--block van-button--round"
 								style="width: 90%;" id="btnLogin">
-								<div class="van-button__content"><span class="van-button__text">登录</span>
+								<div class="van-button__content"><span class="van-button__text">注册</span>
 								</div>
 							</button></div>
 					</form>
