--- a/application/admin/view/tongji/detail.html
+++ b/application/admin/view/tongji/detail.html
@@ -250,11 +250,11 @@
     总盈亏:<span id="totalRealYingKui">0</span>&nbsp;&nbsp;
     总上下:<span id="totalUp">0</span><span id="totalDown">0</span>&nbsp;=&nbsp;<span id="totalUpDown">0</span>
 </div>
-<div style="width:100%;">
-        未飞单:<span id="flyersWait">0</span>&nbsp;&nbsp;
-        飞单成功:<span id="flyersSuc">0</span>&nbsp;&nbsp;
-        飞单失败:<span id="flyersFail">0</span>
-    </div>
+        <!--<div style="width:100%;">
+        未报:<span id="flyersWait">0</span>&nbsp;&nbsp;
+        已报:<span id="flyersSuc">0</span>&nbsp;&nbsp;
+        失败:<span id="flyersFail">0</span>
+    </div>        -->
 
 <div style="width:100%;">
     <button id="btnWay1" style="font-size:14px;">当前积分对账</button>&nbsp;&nbsp;&nbsp;&nbsp;<button id="btnTime" style="font-size:14px;">6点一天</button>
