--- a/application/chat/view/index/login.html
+++ b/application/chat/view/index/login.html
@@ -193,16 +193,16 @@
 			<div class="loginForm">
 				<div style="width: 100%; top: 40%; position: absolute; transform: translateY(-40%);">
 					<div style="width: 100%; text-align: center;">
-						<h1>顺财</h1>
+						<h1>聚财</h1>
 					</div>
 					<form class="van-form">
 						<div class="van-cell-group van-cell-group--inset">
 							<div class="van-cell van-field">
 								<div class="van-cell__title van-field__label"><label id="van-field-1-label"
-										for="van-field-1-input">用户名</label></div>
+										for="van-field-1-input">账户</label></div>
 								<div class="van-cell__value van-field__value">
 									<div class="van-field__body"><input type="text" id="van-field-1-input"
-											class="van-field__control" placeholder="请输入用户名"
+											class="van-field__control" placeholder="请输入账户"
 											aria-labelledby="van-field-1-label"></div>
 								</div>
 							</div>
