--- a/application/rbt/view/index/admin_list.html
+++ b/application/rbt/view/index/admin_list.html
@@ -19,8 +19,12 @@
         <script type="text/javascript" src="__STATIC__/xz/admin/clipboard.min.js"></script>
         <script type="text/javascript" src="__STATIC__/xz/admin/jquery.md5.js"></script>
         <script type="text/javascript" src="__STATIC__/xz/admin/html2canvas.min.js"></script>
-        <!--<script type="text/javascript" src="https://cdn.bootcdn.net/ajax/libs/layer/3.5.1/layer.min.js"></script>-->
         <script type="text/javascript" src="__STATIC__/js/layer/layer.js"></script>
+        <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+        <script>
+        // VConsole 默认会挂载到 `window.VConsole` 上
+        var vConsole = new window.VConsole();
+        </script>
         <style type="text/css">
             .el-dialog__body {
                 padding: 0 !important;
@@ -572,35 +576,35 @@
         </style>
     </head>
     <body>
-        <div class="alertBox">
-            <div class="el-alert el-alert--success is-light" role="alert"
-                style="background:#f0f9eb;color:#67c23a;display:flex;align-items: center;padding:8px 16px;border-radius:4px;">
-                <i class="el-icon el-alert__icon"><svg viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg"
-                        style="width:16px;">
-                        <path fill="currentColor"
-                            d="M512 64a448 448 0 1 1 0 896 448 448 0 0 1 0-896zm-55.808 536.384-99.52-99.584a38.4 38.4 0 1 0-54.336 54.336l126.72 126.72a38.272 38.272 0 0 0 54.336 0l262.4-262.464a38.4 38.4 0 1 0-54.272-54.336L456.192 600.384z">
-                        </path>
-                    </svg></i>
-                <div class="el-alert__content" style="padding: 0 16px;font-size: 13px;"><span class="el-alert__title">
-                        <div>
-                            <p class="gd"></p>
-                        </div>
-                    </span><i class="el-icon el-alert__close-btn closeAlert"
-                        style="position: absolute;top: 12px;right: 10px;"><svg viewBox="0 0 1024 1024"
-                            xmlns="http://www.w3.org/2000/svg" style="width:16px;">
-                            <path fill="currentColor"
-                                d="M764.288 214.592 512 466.88 259.712 214.592a31.936 31.936 0 0 0-45.12 45.12L466.752 512 214.528 764.224a31.936 31.936 0 1 0 45.12 45.184L512 557.184l252.288 252.288a31.936 31.936 0 0 0 45.12-45.12L557.12 512.064l252.288-252.352a31.936 31.936 0 1 0-45.12-45.184z">
-                            </path>
-                        </svg></i></div>
-            </div>
-        </div>
+        <!--<div class="alertBox">-->
+        <!--    <div class="el-alert el-alert--success is-light" role="alert"-->
+        <!--        style="background:#f0f9eb;color:#67c23a;display:flex;align-items: center;padding:8px 16px;border-radius:4px;">-->
+        <!--        <i class="el-icon el-alert__icon"><svg viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg"-->
+        <!--                style="width:16px;">-->
+        <!--                <path fill="currentColor"-->
+        <!--                    d="M512 64a448 448 0 1 1 0 896 448 448 0 0 1 0-896zm-55.808 536.384-99.52-99.584a38.4 38.4 0 1 0-54.336 54.336l126.72 126.72a38.272 38.272 0 0 0 54.336 0l262.4-262.464a38.4 38.4 0 1 0-54.272-54.336L456.192 600.384z">-->
+        <!--                </path>-->
+        <!--            </svg></i>-->
+        <!--        <div class="el-alert__content" style="padding: 0 16px;font-size: 13px;"><span class="el-alert__title">-->
+        <!--                <div>-->
+        <!--                    <p class="gd"></p>-->
+        <!--                </div>-->
+        <!--            </span><i class="el-icon el-alert__close-btn closeAlert"-->
+        <!--                style="position: absolute;top: 12px;right: 10px;"><svg viewBox="0 0 1024 1024"-->
+        <!--                    xmlns="http://www.w3.org/2000/svg" style="width:16px;">-->
+        <!--                    <path fill="currentColor"-->
+        <!--                        d="M764.288 214.592 512 466.88 259.712 214.592a31.936 31.936 0 0 0-45.12 45.12L466.752 512 214.528 764.224a31.936 31.936 0 1 0 45.12 45.184L512 557.184l252.288 252.288a31.936 31.936 0 0 0 45.12-45.12L557.12 512.064l252.288-252.352a31.936 31.936 0 1 0-45.12-45.184z">-->
+        <!--                    </path>-->
+        <!--                </svg></i></div>-->
+        <!--    </div>-->
+        <!--</div>-->
 
         <div class="topframe">
             <div class="tophead">
-                欢迎您：<b>{$Think.session.user_id2}
+               欢迎您:<b>{$Think.session.user_id2}
                 </b>，机：<b>{$Think.session.rbInfo.tuoNum} </b>，过期时间：<b class="guoqitime"></b>&nbsp;&nbsp; &nbsp;&nbsp; <a
                     href="javascript:;" id="ExitLink">退出登录</a>
-                <div class="scoremm">剩余积分:<b><span id="leftScore">0</span> </b></div>
+                <div class="scoremm">总积分:<b><span id="leftScore">0</span> </b></div>
                 <div class="topheadmenu"><span>修改密码</span></div>
             </div>
 
@@ -738,7 +742,7 @@
                             <div class="jifenleftlist" style="left:1px;height:calc(100% - 120px);overflow-y: auto;width:320px;"></div>
                             <div class="jifenright" style="height:calc(100% - 60px);width:235px;">
                                 <img class="headimg" title="点击随机更改头像" src="__STATIC__/xz/admin/defaultheadimg.jpg"
-                                    style="width: 55px;height: 55px;top: 175px;right: 10px;">
+                                    style="width: 55px;height: 55px;top: 200px;right: 10px;">
                                 <input type="file" name="changeHead" class="myHide" id="changeHead" accept="image/png,image/gif,image/jpg,image/jpeg" value="" onchange="upload(this)" />
                                 <button class="create_real" data-type="0">创建玩家</button>
                                 <button class="create_real" data-type="1" style="right:5px;">创建托</button>
@@ -757,8 +761,12 @@
                                         style="width: 110px;border: 1px solid #888;border-radius: 5px;"><button class="setpwd"
                                         style="font-size: 12px;padding: 0px 8px;height: 20px;margin-left:5px;">更新</button>
                                 </div>
-                                <div class="nickname loginPwd" style="display: flex;">验证码：<input id="loginPwd"
-                                        style="width: 110px;border: 1px solid #888;border-radius: 5px;"><button class="setpwd2"
+                                <!--<div class="nickname loginPwd" style="display: flex;">验证码：<input id="loginPwd"-->
+                                <!--        style="width: 110px;border: 1px solid #888;border-radius: 5px;"><button class="setpwd2"-->
+                                <!--        style="font-size: 12px;padding: 0px 8px;height: 20px;margin-left:5px;">更新</button>-->
+                                <!--</div>-->
+                                <div class="nickname fanshui" style="display: flex;">返&nbsp;&nbsp;&nbsp;&nbsp;水：<input id="fanshui"
+                                        style="width: 110px;border: 1px solid #888;border-radius: 5px;"><button class="setFanshui"
                                         style="font-size: 12px;padding: 0px 8px;height: 20px;margin-left:5px;">更新</button>
                                 </div>
                                 <div style="margin-top:10px;">
@@ -795,7 +803,7 @@
                                         style="font-size: 12px;padding: 5px 9px;height: 26px;margin-top:10px;;margin-left:5px;">链接二维码</button>
                                 </div>
                                 <div class="flyers_num" style="display:none;">
-                                    <span>下注范围：</span>
+                                     <span>下注范围：</span>
                                     <select name="flyers_num" id="flyers_num">
                                         <option value="30-300">30-300</option>
                                         <option value="300-1000">300-1000</option>
@@ -1142,7 +1150,7 @@
                                     <input onkeyup="value=value.replace(/[^0-9]/g,&#39;&#39;)">
                                 </div>
                             </div>
-                            <div class="uk-grid uk-grid-small" data-uk-grid-margin="" style="display:none;">
+                            <div class="uk-grid uk-grid-small" data-uk-grid-margin="">
                                 <div class="uk-width-1-3">单码限额：<span style="color: red">*</span></div>
                                 <div class="uk-width-2-3">
                                     <input onkeyup="value=value.replace(/[^0-9]/g,&#39;&#39;)">
@@ -2310,6 +2318,7 @@
                 $(".jifenright #NickName").val(s.NickName);
                 $(".jifenright #userName").val(s.UserName);
                 $(".jifenright #loginPwd").val(s.logincode);
+				$(".jifenright #fanshui").val(s.FanShui);
                 resetJifen(s);
             }
             //更换wx
@@ -2629,6 +2638,26 @@
                         updateJifenList();
                         alertSuc("修改成功！");
                     }
+                });
+            });
+			//修改返水
+            $(".jifenright .setFanshui").click(function() {
+                var s = selectChangejifen;
+                if (s == null) {
+                    alertErr("请先选择用户!");
+                    return;
+                }
+				var val = $(".jifenright #fanshui").val();
+                putAjax("{:url('index/UpdateFanShui')}", {
+                    "wxid": s.wxid,
+					"FanShui":val
+                }, function(data) {
+                    if (data == 0) {
+                        updateJifenList();
+                        alertSuc(s.wxid + "返水改为：" + val);
+                    }else{
+						alertErr("修改失败");
+					}
                 });
             });
             //更换头像
