--- a/application/chat/view/index/index.html
+++ b/application/chat/view/index/index.html
@@ -1345,8 +1345,19 @@
 								'je': $('.je').val(),
 								'qiuIndex': qiuIndex
 							};
-                            ws.send(JSON.stringify(text));
-							$(".throbber-loader").remove();
+							var div = "<div class='msglayer msg0 msgright' ids='0'><div class='fpop'><div class='headimg'><img src='"+'{$rbuser.imgName}'+"' /></div><h5 class='uname'>"+(msgconf.nickName || "自己")+"</h5><div class='msg-loader'><div class='throbber-loader'>Loading…</div></div><pre class='msgpre'>"+sendContent+"</pre></div></div>";
+							if (ws && ws.readyState === WebSocket.OPEN) {
+								try {
+									ws.send(JSON.stringify(text));
+									//$(".throbber-loader").remove();
+									
+								} catch (e) {
+									
+									msgcontent.append(div);
+								}
+							}else{
+								msgcontent.append(div);
+							}
 					        scrollBtm();
 						})();
 					}
@@ -1603,27 +1614,21 @@
 				let heartbeatInterval = null;
 				let reconnectTimeout = null;
 				let isManuallyClosed = false; // 是否人为关闭，避免无限重连
-
 				function initWS() {
 					const wsUrl = "wss://x.hy1965.cn/ws?uid=" + msgconf.uid + "&gt=" + gameType;
 					ws = new WebSocket(wsUrl);
-
 					ws.onopen = function () {
 						console.log("[WebSocket] ✅ 已连接");
-
 						// 启动心跳检测
 						startHeartbeat();
 					};
-
 					ws.onmessage = function (event) {
 						console.log("[WebSocket] 📩 收到消息：", event.data);
-
 						const list = JSON.parse(event.data);
 						if (list.type === 'pong') {
 							console.log("[WebSocket] ❤️ 收到心跳回应：pong");
 							return;
 						}
-
 						if(list.type == 3)
 						{
 							var div1 = "<div class='msglayer msg"+list.ids+" msgright' ids='"+list.ids+"'><div class='fpop'><div class='headimg'><img src='"+list.headimg+"' /></div><h5 class='uname'>"+(list.name || "自己")+"</h5><pre class='msgpre'>"+list.content+"</pre></div></div>";
@@ -1640,9 +1645,6 @@
 							}
 							return;
 						}
-
-
-
 
 						const div = createMsgTag(list, list['isVip']);
 
@@ -2895,6 +2897,11 @@
 				flex:1;
 				box-sizing:border-box;
 				user-select: text !important;
+				/*键盘*/
+				font-size: 1.2rem;
+				padding:0px 8px !important;
+				line-height:34px !important;
+				font-family:unset;
 			}
 
 			.divBottom .inpvkb {
@@ -7200,8 +7207,8 @@
 							<li>查</li>
 							<li>上</li>
 							<li>下</li>
-							<!--<li>加</li>-->
 							<li>无</li>
+							<!--<li>加</li>-->
 							<li>大</li>
 							<li>小</li>
 							<li>单</li>
@@ -7221,15 +7228,18 @@
 						<ul class="nb" style="{if !$game.hasKey}display:none;{/if}">
 							<li>番</li>
 							<li>角</li>
-							<li>严</li>
-							<li>正</li>{if $game.hasTe}<li>加</li>
-							<li>通</li>
 							<li>车</li>
+							<li>严</li>
+							<li>正</li>{if $game.hasTe}
+							<li>加</li>
+							<li>通</li>
+							<!--<li>车</li>-->
 							{if $game.hasTe}<li>特</li>{/if}{/if}{if !$game.hasTe}
 							<li>通</li>
-							<li>车</li>
+							<!--<li>车</li>-->
 							<!--<li class="w2">历史</li>-->
 							<li class="w2">玩法</li>{/if}
+							<!--<li class="w2">历史</li>-->
 							<li class="w2">取消</li>
 						</ul>
 						<ul class="nb">
