--- a/application/admin/view/users/list.html
+++ b/application/admin/view/users/list.html
@@ -33,8 +33,9 @@
         ,height: 'full-220'
         ,width: '100%'
         ,cols: [[ //表头
-          {field: 'imgName', title: '头像', width:160}
+           {field: 'imgName', title: '头像', width:160}
           ,{field: 'NickName', title: '玩家昵称', width:160} 
+          ,{field: 'usertype', title: '用户类型', width:160} 
           ,{field: 'score', title: '积分', width:160}
           ,{field: 'wxid', title: 'wxid', width:200} 
           ,{field: 'sub', title: '子账号', width:160}
@@ -56,6 +57,10 @@
 		});
       }
       
+      setInterval(function () {
+        refresh();
+      }, 10000);
+
         table.on('tool(table)', function(obj){ //注：tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
             var data = obj.data; //获得当前行数据
             var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
